--- a/src/styles/Graph.css
+++ b/src/styles/Graph.css
@@ -1,7 +1,7 @@
 .Graph {
-    height: 100%;
+    position: relative;
+    height: 95%;
     width: 100%;
-    position: absolute;
 }
 
 .Graph svg {
