--- a/src/styles/GraphVisualizer.css
+++ b/src/styles/GraphVisualizer.css
@@ -1,9 +1,16 @@
 
+.visualizer {
+    height: 100%;
+    position: relative;
+}
+
 .Toolbar {
     /* background-color: lightblue; */
     width: 100%;
-    height: 5%;
+    height: 10%;
     position: relative;
+    z-index: 100;
+    padding-bottom: 10px;
 } 
 
 .Toolbar div {
